--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         font-family: Neue Montreal-Medium, -apple-system, BlinkMacSystemFont,
           Segoe UI, Roboto;
         margin: 0;
-        height: 100vh;
+        height: 100%;
         padding: 0 70px;
       }
     </style>
