--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,15 @@
         font-family: Neue Montreal-Medium, -apple-system, BlinkMacSystemFont,
           Segoe UI, Roboto;
         margin: 0;
-        height: 100%;
-        padding: 0 70px;
+        /* height: 100%; */
+        min-height: 100vh;
+        padding: 0 20px;
+      }
+
+      @media (min-width: 1100px) {
+        body {
+          padding: 0 70px;
+        }
       }
     </style>
     <title>React App</title>
