--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
         box-sizing: border-box;
       }
 
+      html {
+      }
+
       body {
         font-family: Neue Montreal-Medium, -apple-system, BlinkMacSystemFont,
           Segoe UI, Roboto;
