--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         margin: 0;
         /* height: 100%; */
         min-height: 100vh;
-        padding: 0 20px;
+        /* padding: 0 20px; */
       }
 
       @media (min-width: 1100px) {
