--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
         /* height: 100%; */
         min-height: 100vh;
         /* padding: 0 20px; */
+        width: 100%;
       }
 
       @media (min-width: 1100px) {
