--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- <div id="portal"></div> -->
+    <div id="portal"></div>
   </body>
 </html>
