--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         margin: 0;
         box-sizing: border-box;
         color: #2f2e2e !important;
+        /* color: hsl(0, 0, 15) !important; */
       }
 
       html {
@@ -27,6 +28,8 @@
         min-height: 100vh;
         /* padding: 0 20px; */
         width: 100%;
+        background-color: rgb(231, 233, 225);
+        /* background-color: rgb(222, 222, 220); */
       }
 
       @media (min-width: 1100px) {
