changed mobile button colors

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         margin: 0;
         box-sizing: border-box;
         color: #2f2e2e !important;
-        /* color: hsl(0, 0, 15) !important; */
+        color: hsl(0, 0, 15) !important;
       }
 
       html {
